@@ -31,7 +31,6 @@ import org.openrewrite.test.RewriteTest;
 import org.openrewrite.test.SourceSpec;
 import org.openrewrite.test.TypeValidation;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 import java.util.function.UnaryOperator;
@@ -127,7 +126,7 @@ class TabsAndIndentsTest implements RewriteTest {
           .parser(JavaParser.fromJavaVersion().styles(singletonList(
             new NamedStyles(
               Tree.randomId(), "test", "Test", "Test", emptySet(),
-              Arrays.asList(
+              List.of(
                 with.apply(IntelliJ.tabsAndIndents()),
                 wrap.apply(IntelliJ.wrappingAndBraces())
               )
@@ -2627,6 +2626,21 @@ class TabsAndIndentsTest implements RewriteTest {
                       ""\";
                   private final String singleLine = ""\"
                     noEndLine""\";
+                  private void method(String one, String two) {
+                      method(""\"
+                        indent me!
+                        ""\", ""\"
+                        indent me too!
+                        ""\");
+                      method(
+                        ""\"
+                        indent me!
+                        ""\",
+                        ""\"
+                        indent me too!
+                        ""\"
+                      );
+                  }
               }
               """,
             """
@@ -2640,6 +2654,21 @@ class TabsAndIndentsTest implements RewriteTest {
                           ""\";
                   private final String singleLine = ""\"
                                                     noEndLine""\";
+                  private void method(String one, String two) {
+                      method(""\"
+                             indent me!
+                             ""\", ""\"
+                                   indent me too!
+                                   ""\");
+                      method(
+                              ""\"
+                              indent me!
+                              ""\",
+                              ""\"
+                              indent me too!
+                              ""\"
+                      );
+                  }
               }
               """
           )
@@ -2663,6 +2692,21 @@ class TabsAndIndentsTest implements RewriteTest {
                     ""\"
                       NO
                       ""\";
+                  private void method(String one, String two) {
+                      method(""\"
+                        indent me!
+                        ""\", ""\"
+                              indent me too!
+                              ""\");
+                      method(
+                        ""\"
+                        indent me!
+                        ""\",
+                        ""\"
+                        indent me too!
+                        ""\"
+                      );
+                  }
               }
               """,
             """
@@ -2674,6 +2718,21 @@ class TabsAndIndentsTest implements RewriteTest {
                           ""\"
                                   NO
                                   ""\";
+                  private void method(String one, String two) {
+                      method(""\"
+                              indent me!
+                              ""\", ""\"
+                              indent me too!
+                              ""\");
+                      method(
+                              ""\"
+                                      indent me!
+                                      ""\",
+                              ""\"
+                                      indent me too!
+                                      ""\"
+                      );
+                  }
               }
               """
           )
